# fileprot

./: .gitignore  AGENTS.md  Cargo.toml  INSTALL.md  README.md  build.sh  fileprot.conf.example  fileprotd.conf.example  install-user.sh  install.sh
.github/workflows/: ci.yml
assets/: fileprot.desktop  gen_icons.sh
dbus/: ch.bues.fileprot.Daemon.conf
fileprot/: Cargo.toml
fileprot-common/: Cargo.toml
fileprot-common/src/: config.rs  dbus_interface.rs  fileops.rs  lib.rs
fileprot/src/: dbus_client.rs  main.rs  style.css  ui.rs
fileprot/src/ui/: app.rs  components.rs  style.css  tray.rs
fileprotd/: Cargo.toml
fileprotd/src/: access_control.rs  dbus_service.rs  filesystem.rs  main.rs
scripts/: lib.sh
systemd/: fileprot.service  fileprotd.service
