[workspace]
members = [
    "fileprot-common",
    "fileprotd",
    "fileprot",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = [ "derive", "wrap_help", "unicode" ] }
dioxus = { version = "0.7", features = [ "desktop", "mobile" ] }
env_logger = "0.11"
fuser = "0.17"
image = { version = "0.25", default-features = false, features = [ "png" ] }
ksni = "0.3"
libc = "0.2"
log = "0.4"
nix = { version = "0.31", default-features = false, features = [ "dir", "fs", "mount", "process", "user" ] }
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", default-features = false, features = [ "rt-multi-thread", "time", "macros", "sync", "signal" ] }
tokio-stream = "0.1"
toml = "1.1"
uuid = { version = "1", features = ["v4"] }
x11rb = { version = "0.13", default-features = false }
zbus = { version = "5.15", default-features = false, features = [ "tokio" ] }

fileprot-common = { path = "./fileprot-common" }

[profile.dev]
debug = "limited"
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
overflow-checks = true
