[package]
name = "fileprot-common"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
toml = { workspace = true }
zbus = { workspace = true, features = ["blocking-api"] }
