[package]
name = "fileprot"
version = { workspace = true }
edition = { workspace = true }
publish = false

[[bin]]
name = "fileprot"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
dioxus = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
ksni = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
x11rb = { workspace = true }
zbus = { workspace = true }

fileprot-common = { workspace = true }
