[package]
name = "fileprotd"
version = { workspace = true }
edition = { workspace = true }
publish = false

[[bin]]
name = "fileprotd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
fuser = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }

fileprot-common = { workspace = true }
